# simple_dynamical_models

./: .gitignore  README.md  Testing Simple Shallow Water.ipynb  pyproject.toml  setup.py  travis.yml
.github/: test-simplemodels.yml
.github/workflows/: test-simplemodels.yml
notebooks/: Testing Simple Shallow Water.ipynb
src/simplemodels/: shallowwater1d.py
tests/: __init__.py  test_sw1d.py
