[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simple_dynamical_models"
version = "0.0.1"
authors = [
  { name="Travis A. O'Brien", email="obrienta@iu.edu" },
]
description = "Simple atmospheric dynamical models for teaching"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/taobrienlbl/simple_dynamical_models"
"Bug Tracker" = "https://github.com/taobrienlbl/simple_dynamical_models/issues"